Closed Bug 541646 Opened 16 years ago Closed 15 years ago

Starting Private Browsing mode crashes a plugin [@ @0x0 | mozilla::plugins::PPluginInstanceChild::OnCallReceived(IPC::Message const&, IPC::Message*&) ]

Categories

(Core :: IPC, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: bugzilla, Unassigned)

Details

(Keywords: crash)

Crash Data

With the current tabs whenever I start Private Browsing mode a plugin crashes http://crash-stats.mozilla.com/report/index/0904f120-f68d-4b01-a39a-865202100123 http://crash-stats.mozilla.com/report/index/6730f516-0b2f-4273-a8a4-d22bd2100123 Firefox 3.7a1pre Crash Report [@ @0x0 | mozilla::plugins::PPluginInstanceChild::OnCallReceived(IPC::Message const&, IPC::Message*&) ] using trunk
To reproduce: 1) load http://www.fitnessworld.dk/ in a tab 2) Start Private Browsning 3) Crash! Flash version: Plugin Version: 10.0.42.34
Confirmed on Windows Vista.
Keywords: crash
Summary: Starting Private Browsing mode crashes a plugin → Starting Private Browsing mode crashes a plugin [@ @0x0 | mozilla::plugins::PPluginInstanceChild::OnCallReceived(IPC::Message const&, IPC::Message*&) ]
I see this on Linux as well.
OS: Windows Vista → All
Hardware: x86 → All
This also happens if you are viewing this page in private browsing mode and do a stop private browsing.
Is this flash-only?
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
Verifying fixed with today's nightly: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a1pre) Gecko/20100204 Minefield/3.7a1pre cset: http://hg.mozilla.org/mozilla-central/rev/3e7755e00fa1
Status: RESOLVED → VERIFIED
I can confirm the fix too Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.3a1pre) Gecko/20100204 Minefield/3.7a1pre (.NET CLR 3.5.30729) ID:20100204044025
This is Number 2 on the 3 day Top Crashers for Firefox 3.7a2pre list as of 12 Feb; which makes me wonder if this bug is really fixed.
Crash Signature: [@ @0x0 | mozilla::plugins::PPluginInstanceChild::OnCallReceived(IPC::Message const&, IPC::Message*&) ]
You need to log in before you can comment on or make changes to this bug.