Bug 541646 - Crash when Flash is running and we enter private browsing mode, r=bent